支持保存配置文件

--- a/todo
+++ b/todo
@@ -1,5 +1,10 @@
 1.快捷键写到设置面板里面。
 2.快捷键可以设置，包括拖动图片
 3.UI优化
-4.图片路径支持保存，环境变量或者注册表，或者别的
-5.快速切换图片
+4.配置文件保存到C盘
+5.快速切换图片，左右方向键切换图片
+6.去掉退出快捷键
+7.托盘图标
+8.左键单击托盘打开设置界面
+9.readme.md 简单介绍+环境配置&构建+效果图+使用说明
+10.补全注释
