6.退出快捷键默认改为(End) 7.托盘图标,程序图标

--- a/todo
+++ b/todo
@@ -3,8 +3,8 @@
 3.UI优化
 4.配置文件保存到C盘
 5.快速切换图片，左右方向键切换图片
-6.去掉退出快捷键
-7.托盘图标
+6.退出快捷键默认改为(End)
+7.托盘图标,程序图标
 8.左键单击托盘打开设置界面
 9.readme.md 简单介绍+环境配置&构建+效果图+使用说明
 10.补全注释
