修复截图报错1

--- a/todo
+++ b/todo
@@ -8,3 +8,11 @@
 8.左键单击托盘打开设置界面
 9.readme.md 简单介绍+环境配置&构建+效果图+使用说明
 10.补全注释
+
+交互流程
+F1 → 隐藏叠加窗口 → 截取桌面 → 全屏覆盖窗口（十字光标）
+拖拽鼠标 → 实时选区（选区外变暗，显示尺寸）
+松开鼠标 → 选区下方出现 ✓确认 / ✗取消 按钮
+点确认 → 保存 screenshot_YYYYMMDD_HHMMSS.png 到图片目录 → 自动加载
+ESC / 点取消 → 取消截图，恢复主窗口
+可重新拖拽覆盖之前的选区
