--- a/todo
+++ b/todo
@@ -8,6 +8,8 @@
 8.左键单击托盘打开设置界面
 9.readme.md 简单介绍+环境配置&构建+效果图+使用说明
 10.补全注释
+11.旋转图片 Num4 Num6
+12.自带截图功能 F1触发
 
 交互流程
 F1 → 隐藏叠加窗口 → 截取桌面 → 全屏覆盖窗口（十字光标）
